# 6502-Emulator

./: CMakeLists.txt  readme.md
include/: bus.h  bus.hpp  common.hpp  cpu6502.h  cpu6502.hpp
includes/: bus.h  cpu6502.h
src/: bus.cpp  cpu6502.cpp  main.cpp
